adds missing license information

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,6 +22,7 @@ sources:
     date: 1802
     rism: 990035804
     url: https://doi.org/10.3931/e-rara-24804
+    license: public domain
     notes: Hans Georg Nägeli, Zürich; source for German lyrics
 imslp: Das_Halleluja_der_Schöpfung_(Kunzen%2C_Friedrich_Ludwig_Aemilius)
 parts:
